--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,7 +22,7 @@ nav {
   border-bottom: 1px solid #ddd;
 }
 nav a {
-  margin-left: 12px;
+  margin: auto 18px;
 }
 nav .logo {
   margin-right: auto;
@@ -34,4 +34,11 @@ footer {
   margin-top: 60px;
   color: #777;
   border-top: 1px solid #eaeaea;
+}
+.not-found {
+  text-align: center;
+}
+.not-found a{
+  color: #4979ff;
+  text-decoration: underline;
 }
