--- a/styles/ninja.module.css
+++ b/styles/ninja.module.css
@@ -4,6 +4,7 @@
     display: block;
     margin: 20px 10px;
     border-left: 8px solid #fff;
+    transition: all ease-in-out 0.4s;
   }
   .single:hover {
     border-left: 8px solid #4979ff;
