--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   background: #f2f2f2;
   color: #333;
   font-family: "Nunito";
+  margin: 1rem 4%;
 }
 a {
   color: #333;
@@ -20,6 +21,9 @@ nav {
   justify-content: flex-end;
   align-items: flex-end;
   border-bottom: 1px solid #ddd;
+  position: sticky;
+  top: 0;
+  background: #f2f2f2;
 }
 nav a {
   margin: auto 18px;
